# LX-Scanner-Model

./: .gitignore  .pylintrc  Makefile  README.md  config.toml  pyproject.toml
lx_scanner_model/: __main__.py  logger.py  model.py  settings.py  worker.py
lx_scanner_model/ai_model/: pretrained.py
lx_scanner_model/displayers/: marker.py
lx_scanner_model/helpers/: image.py  marker.py
lx_scanner_model/model/: pretrained.py
lx_scanner_model/rabbitmq/: connection.py  consumer.py  models.py  publisher.py
lx_scanner_model/scanner_model/: model.py
tests/: __main__.py
